test/fixtures/load_dirs/syntax_error/error.js
modulde.exports = function (a) {
  yield a;
}
